fixed main spacing

--- a/frontend/src/pages/bathroom/BathroomPage.scss
+++ b/frontend/src/pages/bathroom/BathroomPage.scss
@@ -57,10 +57,7 @@ body {
     width: 20px;
     height:auto;
     object-fit: contain;
-  }
 
-
-    left: 245px;
 
     .gender {
       // border-style: solid;
